Reactified collection tree megacommit
Unfinished:

- Tests have not been adapted yet
- Old collection tree view code not removed yet
- No OS specific styling yet

Differences from the XUL version:

- Supports smooth scrolling
- Possible to see flashes of rows being drawn as you scroll
as DOM entries are being reloaded by the mozilla tree
- Drag-and-Drop is a stuttery compared to the XUL tree
- Slight unsmoothness of tag-selector resize as the tree
is redrawing itself on viewport resizes

Notes:
- The mozilla tree.js required a fair amount of edits, of which not all
were tracked with comments
- Performance untested, but there's a visible decrease in smoothness
of operations that require rapid tree redrawing but some optimizations
might be possible

--- a/scss/_zotero-react-client.scss
+++ b/scss/_zotero-react-client.scss
@@ -27,3 +27,5 @@
 @import "components/search";
 @import "components/tagsBox";
 @import "components/tagSelector";
+@import "components/tree";
+@import "components/collectionTree";
