Adjust collection tree tests for the react tree and bugfixes
(And use the new collection tree in other views where needed)

--- a/scss/components/_collection-tree.scss
+++ b/scss/components/_collection-tree.scss
@@ -34,6 +34,10 @@
       color: $shade-0 !important;
       background: $shade-5 !important;
     }
+    
+    &.unread {
+      font-weight: bold;
+    }
   }
   
   .tree-item-label {
