Add react collection tree inline collection label editing

--- a/scss/components/_collection-tree.scss
+++ b/scss/components/_collection-tree.scss
@@ -40,11 +40,18 @@
     }
   }
   
-  .tree-item-label {
+  span.tree-node-label {
     overflow-x: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    margin-left: 4px;
+  }
+  
+  input.tree-node-label {
+    border: 1px highlight solid;
+    padding: 1px 2px;
+    margin-right: 5px;
+    width: 100%;
+    font-size: inherit;
   }
   
   .icon {
