--- a/scss/components/_collection-tree.scss
+++ b/scss/components/_collection-tree.scss
@@ -41,7 +41,7 @@
   }
   
   span.tree-node-label {
-    overflow-x: hidden;
+    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
   }
