--- a/scss/mac/_virtualized-tree.scss
+++ b/scss/mac/_virtualized-tree.scss
@@ -1,3 +1,7 @@
+.arrow {
+  width: 19px;
+}
+
 .arrow svg {
   fill: #888;
   width: 16px;
@@ -5,4 +9,8 @@
 
 .focused:not(.highlighted) .arrow svg {
   fill: #fff;
+}
+
+.spacer-arrow {
+  min-width: 19px;
 }
