--- a/scss/zotero-react-client-unix.scss
+++ b/scss/zotero-react-client-unix.scss
@@ -7,4 +7,5 @@
 @import "linux/editable";
 @import "linux/search";
 @import "linux/tagsBox";
+@import "linux/virtualized-tree";
 @import "linux/collection-tree";
