--- a/scss/zotero-react-client-win.scss
+++ b/scss/zotero-react-client-win.scss
@@ -7,4 +7,4 @@
 @import "win/search";
 @import "win/tag-selector";
 @import "win/collection-tree";
-@import "win/tree";
+@import "win/virtualized-tree";
