--- a/scss/zotero-react-client-mac.scss
+++ b/scss/zotero-react-client-mac.scss
@@ -8,5 +8,5 @@
 @import "mac/editable";
 @import "mac/search";
 @import "mac/tag-selector";
-@import "mac/tree";
+@import "mac/virtualized-tree";
 @import "mac/collection-tree";
