--- a/scss/_zotero-react-client.scss
+++ b/scss/_zotero-react-client.scss
@@ -30,3 +30,5 @@
 @import "components/tree";
 @import "components/virtualized-tree";
 @import "components/collection-tree";
+@import "components/virtualized-table";
+@import "components/items-tree";
