--- a/scss/components/_items-tree.scss
+++ b/scss/components/_items-tree.scss
@@ -1,4 +1,10 @@
 #zotero-items-tree {
   border: 1px solid #ccc;
   background-color: -moz-field;
+
+
+  .row.selected {
+    background-color: highlight;
+    color: highlighttext;
+  }
 }
