Excellent child items, key handlers and unbroken view switching!

--- a/scss/components/_items-tree.scss
+++ b/scss/components/_items-tree.scss
@@ -28,7 +28,7 @@
     height: 13px;
   }
   
-  .cell.title .icon:not(.arrow) {
+  .cell.title .icon:not(.twisty) {
     margin-right: 6px;
   }
   
