--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -8,6 +8,7 @@
   display: inline-block;
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: center;
 }
 
 .icon.icon-downchevron > img {
