Attempt a layout fix

--- a/scss/components/_items-tree.scss
+++ b/scss/components/_items-tree.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   min-width: 290px;
   min-height: 150px;
+  height: 150px;
+  width: 290px;
   
   .items-pane-message {
     display: flex;
