--- a/scss/zotero-react-client-unix.scss
+++ b/scss/zotero-react-client-unix.scss
@@ -8,4 +8,5 @@
 @import "linux/search";
 @import "linux/tagsBox";
 @import "linux/virtualized-tree";
+@import "linux/virtualized-table";
 @import "linux/collection-tree";
