--- a/scss/components/_virtualized-table.scss
+++ b/scss/components/_virtualized-table.scss
@@ -125,10 +125,9 @@
       display: block;
       position: absolute;
       right: 10px;
-      transform: scale(1.25);
       
       &.ascending {
-        transform: scale(1.25) rotate(180deg);
+        transform: rotate(180deg);
       }
     }
   }
