--- a/scss/_zotero-react-client.scss
+++ b/scss/_zotero-react-client.scss
@@ -30,4 +30,4 @@
 @import "components/virtualized-tree";
 @import "components/collection-tree";
 @import "components/virtualized-table";
-@import "components/items-tree";
+@import "components/item-tree";
