--- a/scss/components/_virtualized-table.scss
+++ b/scss/components/_virtualized-table.scss
@@ -1,7 +1,7 @@
 //
 // Virtualized table
 // --------------------------------------------------
-.virtualized-table, .drag-image-container{
+.virtualized-table, .drag-image-container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -32,7 +32,7 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 22px;
+    height: 18px;
     box-sizing: border-box;
     
     &.drop {
@@ -76,8 +76,8 @@
   align-items: center;
   width: calc(100% - 11px);
   border-bottom: 1px solid #ccc;
-  background-image: linear-gradient(#fff, #fafafa);
-  height: 1.7em;
+  background: #f6f6f6;
+  height: 14px;
   overflow: hidden;
   border-right: 1px solid #ddd;
  
@@ -95,13 +95,13 @@
       background: #fff;
     }
     
+    
     &.dragging {
-      color: #666;
-      background: #f8f8f8;
+      background: #e9e9e9;
     }
      
     .resizer {
-      background: linear-gradient(#ddd, #ddd) no-repeat center/1px 100%; 
+      background: linear-gradient(#ddd, #ddd) no-repeat center/1px 80%;
       cursor: col-resize;
       height: 100%;
       content: "\00a0";
@@ -137,27 +137,17 @@
   flex: 1 0;
   
   .cell {
-    padding: 0 5px;
+    padding: 2px 5px;
     text-overflow: ellipsis;
     overflow: hidden;
     pointer-events: none;
+    min-height: 90%;
     
     &:first-child {
       padding-left: 5px;
     }
   }
 }
-
-.virtualized-table-body .js-window {
-  background: repeating-linear-gradient(
-    0deg,
-    -moz-OddTreeRow,
-    -moz-OddTreeRow 22px,
-    -moz-EvenTreeRow 22px,
-    -moz-EvenTreeRow 44px
-  );
-}
-
 
 .ReactVirtualized__Table__sortableHeaderIconContainer {
   display: flex;
