--- a/scss/linux/_virtualized-table.scss
+++ b/scss/linux/_virtualized-table.scss
@@ -1,7 +1,22 @@
-.virtualized-table-header .cell .sort-indicator {
-  transform: scale(1.25);
-  
-  &.ascending {
-    transform: scale(1.25) rotate(180deg);
+.virtualized-table, .drag-image-container {
+  .row {
+    height: 22px;
   }
+}
+.virtualized-table-header {
+  height: 28px;
+  background-image: linear-gradient(#fff, #fafafa);
+  
+  &.dragging {
+    color: #666;
+    background: #f8f8f8;
+  }
+  
+  .cell .sort-indicator {
+    transform: scale(1.25);
+    
+    &.ascending {
+      transform: scale(1.25) rotate(180deg);
+    }
+  } 
 }
