--- a/scss/zotero-react-client-mac.scss
+++ b/scss/zotero-react-client-mac.scss
@@ -9,4 +9,6 @@
 @import "mac/search";
 @import "mac/tag-selector";
 @import "mac/virtualized-tree";
+@import "mac/virtualized-table";
 @import "mac/collection-tree";
+@import "mac/item-tree";
