Some tests and stuff

--- a/scss/zotero-react-client-unix.scss
+++ b/scss/zotero-react-client-unix.scss
@@ -9,4 +9,5 @@
 @import "linux/tagsBox";
 @import "linux/virtualized-tree";
 @import "linux/virtualized-table";
+@import "linux/item-tree";
 @import "linux/collection-tree";
