--- a/scss/linux/_collection-tree.scss
+++ b/scss/linux/_collection-tree.scss
@@ -3,7 +3,7 @@
   margin-bottom: -1px;
 }
 
-#zotero-collections-tree .tree .tree-node {
+#zotero-collections-tree .virtualized-table .row {
   height: 1.333em;
 }
 
