--- a/scss/mac/_collection-tree.scss
+++ b/scss/mac/_collection-tree.scss
@@ -1,11 +1,11 @@
 #zotero-collections-tree {
-  .tree {
+  .virtualized-table {
     background-color: #d2d8e2;
     
-    .tree-node {
+    .row {
       height: 1.818em;
       
-      &.focused:not(.highlighted) {
+      &.selected:not(.highlighted) {
         background: -moz-linear-gradient(top, #6494D4, #2559AC) repeat-x;
         border-top: 1px solid #5382C5;
         font-weight: bold !important;
@@ -15,7 +15,7 @@
       }
     }
     
-    &:not(:focus) .tree-node.focused:not(.highlighted) {
+    &:not(:focus) .row.selected:not(.highlighted) {
       background: -moz-linear-gradient(top, #A0B0CF, #7386AB) repeat-x;
       border-top: 1px solid #94A1C0;
     }
@@ -23,7 +23,7 @@
     &:-moz-window-inactive {
       background-color: rgb(232, 232, 232);
 
-      .tree-node.focused:not(.highlighted) {
+      .row.selected:not(.highlighted) {
         background: -moz-linear-gradient(top, #B4B4B4, #8A8A8A) repeat-x;
         border-top: 1px solid #979797;
       }
@@ -32,21 +32,21 @@
 }
 
 // IDK why, but these heights are all over the place on macOS (not a f(x)=x)
-*[zoteroFontSize=medium] #zotero-collections-tree .tree .tree-node {
+*[zoteroFontSize=medium] #zotero-collections-tree .virtualized-table .row {
   height: 1.739em;
   &.focused:not(.highlighted) {
     height: calc(1.738em - 1px);
   }
 }
 
-*[zoteroFontSize=large] #zotero-collections-tree .tree .tree-node {
+*[zoteroFontSize=large] #zotero-collections-tree .virtualized-table .row {
   height: 1.68em;
   &.focused:not(.highlighted) {
     height: calc(1.68em - 1px);
   }
 }
 
-*[zoteroFontSize=x-large] #zotero-collections-tree .tree .tree-node {
+*[zoteroFontSize=x-large] #zotero-collections-tree .virtualized-table .row {
   height: 1.697em;
   &.focused:not(.highlighted) {
     height: calc(1.697em - 1px);
