--- a/scss/components/_virtualized-table.scss
+++ b/scss/components/_virtualized-table.scss
@@ -1,6 +1,25 @@
 //
 // Virtualized table
 // --------------------------------------------------
+
+/**
+    <hbox class="virtualized-table-container" flex="1">
+        <html:div id="virtualized-table-div"/>
+    </hbox>
+ */
+.virtualized-table-container {
+  display: flex;
+  height: 0;
+  flex-direction: column;
+  > div {
+    display: flex;
+    flex: 1;
+    background-color: -moz-field;
+    overflow: hidden;
+    position: relative;
+  }
+}
+
 .virtualized-table, .drag-image-container {
   width: 100%;
   display: flex;
@@ -19,14 +38,38 @@
   }
    
   .cell {
-    min-width: 10px;
+    min-width: 30px;
     cursor: default;
     white-space: nowrap;
     flex-grow: 1;
     flex-shrink: 1;
     box-sizing: border-box;
+    
+    &.primary {
+      display: flex;
+      align-items: center;
+
+      :not(.cell-text) {
+        flex-shrink: 0
+      }
+
+      .cell-text {
+        flex-shrink: 1;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        margin-left: 6px;
+      }
+      
+      .twisty + .cell-text, .spacer-twisty + .cell-text {
+        margin-left: 0;
+      }
+    }
+
+    .cell-icon {
+      min-width: 16px;
+    }
   }
-  
+
   .row {
     display: flex;
     flex-direction: row;
@@ -69,6 +112,10 @@
     &.unread {
       font-weight: bold;
     }
+
+    &.context-row {
+      color: gray;
+    }
   }
 
   .column-drag-marker {
@@ -91,6 +138,10 @@
   height: 14px;
   overflow: hidden;
   border-right: 1px solid #ddd;
+  
+  &.static-columns {
+    pointer-events: none;
+  }
  
   .column-picker {
     text-align: center;
@@ -105,7 +156,6 @@
     &:hover {
       background: #fff;
     }
-    
     
     &.dragging {
       background: #e9e9e9;
@@ -149,6 +199,8 @@
 
 .virtualized-table-body, .drag-image-container{
   flex: 1 0;
+  max-width: 100%;
+  overflow: auto;
   
   .cell {
     padding: 2px 5px;
@@ -163,13 +215,36 @@
   }
 }
 
-.ReactVirtualized__Table__sortableHeaderIconContainer {
+.tree {
+  overflow: hidden;
+  white-space: nowrap;
+  outline: none;
+  user-select: none;
+}
+
+.spacer-arrow, .spacer-twisty {
+  display: inline-block;
+  min-width: 8px;
+}
+
+.arrow, .twisty {
+  margin-right: 0 !important;
   display: flex;
   align-items: center;
+
+  svg {
+    fill: #444;
+    transition: transform 0.125s ease;
+    transform: rotate(-90deg);
+  }
+
+  &.open svg {
+    transform: rotate(0deg);
+  }
 }
-.ReactVirtualized__Table__sortableHeaderIcon {
-  flex: 0 0 24px;
-  height: 1em;
-  width: 1em;
-  fill: currentColor;
+
+html[dir="rtl"] .arrow, html[dir="rtl"] .twisty {
+  svg, svg:dir(rtl), svg:-moz-locale-dir(rtl) {
+    transform: rotate(90deg);
+  }
 }
