--- a/scss/linux/_virtualized-table.scss
+++ b/scss/linux/_virtualized-table.scss
@@ -1,6 +1,16 @@
+.virtualized-table {
+  border: 1px solid #ccc;
+}
 .virtualized-table, .drag-image-container {
   .row {
-    height: 22px;
+    height: 20px;
+  }
+
+  .arrow, .twisty {
+    padding-right: 3px;
+    svg {
+      width: 5px;
+    }
   }
 }
 .virtualized-table-header {
