--- a/scss/components/_item-tree.scss
+++ b/scss/components/_item-tree.scss
@@ -4,7 +4,7 @@
   height: 150px;
   width: 290px;
   
-  .items-pane-message {
+  .items-tree-message {
     display: flex;
     justify-content: center;
     align-items: center;
