--- a/scss/components/_virtualized-table.scss
+++ b/scss/components/_virtualized-table.scss
@@ -75,7 +75,6 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 18px;
     box-sizing: border-box;
     
     &.drop {
@@ -202,32 +201,24 @@
   max-width: 100%;
   overflow: auto;
   
+  .row {
+    padding-left: 6px;
+  }
+  
   .cell {
     padding: 2px 5px;
     text-overflow: ellipsis;
     overflow: hidden;
     pointer-events: none;
     min-height: 90%;
-    
-    &:first-child {
-      padding-left: 5px;
-    }
   }
 }
-
-.tree {
-  overflow: hidden;
-  white-space: nowrap;
-  outline: none;
-  user-select: none;
-}
-
-.spacer-arrow, .spacer-twisty {
+.spacer-twisty {
   display: inline-block;
   min-width: 8px;
 }
 
-.arrow, .twisty {
+.twisty {
   margin-right: 0 !important;
   display: flex;
   align-items: center;
@@ -243,7 +234,7 @@
   }
 }
 
-html[dir="rtl"] .arrow, html[dir="rtl"] .twisty {
+html[dir="rtl"] .twisty {
   svg, svg:dir(rtl), svg:-moz-locale-dir(rtl) {
     transform: rotate(90deg);
   }
