--- a/scss/components/_virtualized-table.scss
+++ b/scss/components/_virtualized-table.scss
@@ -57,11 +57,11 @@
         flex-shrink: 1;
         text-overflow: ellipsis;
         overflow: hidden;
-        margin-left: 6px;
+        margin-inline-start: 6px;
       }
       
       .twisty + .cell-text, .spacer-twisty + .cell-text {
-        margin-left: 0;
+        margin-inline-start: 0;
       }
     }
 
@@ -136,7 +136,7 @@
   background: #f6f6f6;
   height: 14px;
   overflow: hidden;
-  border-right: 1px solid #ddd;
+  border-inline-end: 1px solid #ddd;
   
   &.static-columns {
     pointer-events: none;
@@ -172,13 +172,13 @@
     }
     
     .label {
-      margin-left: 10px;
+      margin-inline-start: 10px;
       overflow: hidden;
       text-overflow: ellipsis;
     }
     &.cell-icon {
       > .label {
-        margin-left: 0;
+        margin-inline-start: 0;
       }
       justify-content: center;
     }
@@ -202,7 +202,7 @@
   overflow: auto;
   
   .row {
-    padding-left: 6px;
+    padding-inline-start: 6px;
   }
   
   .cell {
@@ -219,7 +219,7 @@
 }
 
 .twisty {
-  margin-right: 0 !important;
+  margin-inline-end: 0 !important;
   display: flex;
   align-items: center;
 
@@ -230,12 +230,22 @@
   }
 
   &.open svg {
-    transform: rotate(0deg);
+    transform: rotate(0deg) !important;
   }
 }
 
-html[dir="rtl"] .twisty {
-  svg, svg:dir(rtl), svg:-moz-locale-dir(rtl) {
+*[dir=rtl] {
+  .virtualized-table-header {
+    .cell .sort-indicator {
+      left: 10px;
+      right: initial;
+    }
+    .resizer {
+      right: -5px;
+      left: initial;
+    }
+  }
+  .twisty svg {
     transform: rotate(90deg);
   }
 }
