--- a/scss/win/_item-tree.scss
+++ b/scss/win/_item-tree.scss
@@ -1,12 +1,12 @@
 #zotero-items-tree .virtualized-table {
   .row {
-    padding-right: 1px;
+    padding-inline-end: 1px;
     &.selected {
       background-color: #e5f3ff;
       border: 1px solid #7bc3ff;
       color: inherit;
-      padding-left: 1px;
-      padding-right: 0;
+      padding-inline-start: 1px;
+      padding-inline-end: 0;
     }
     &:hover {
       background-color: #e5f3ff;
@@ -20,14 +20,14 @@
       color: inherit;
       background: #f0f0f0;
       border: none;
-      padding-left: 2px;
-      padding-right: 1px;
+      padding-inline-start: 2px;
+      padding-inline-end: 1px;
     }
     &.selected:hover {
       background-color: #e5f3ff;
       border: 1px solid #7bc3ff;
-      padding-left: 1px;
-      padding-right: 0;
+      padding-inline-start: 1px;
+      padding-inline-end: 0;
     }
   }
 }
